@startuml client-server-events
title Client — ServerEvent hierarchy & EventVisitor (org.adsl.client.serverEvents)

skinparam classAttributeIconSize 0
skinparam packageStyle rectangle
hide empty members

package "client.serverEvents" {

  interface ServerEvent {
    +<S extends Screen<S>> accept(visitor: EventVisitor<S>): S
  }

  interface "EventVisitor<S extends Screen<S>>" as EventVisitor {
    +visit(event: LoginNeededEvent): S
    +visit(event: HomeUpdateEvent): S
    +visit(event: LobbyUpdateEvent): S
    +visit(event: GameUpdateEvent): S
    +visit(event: EndGameEvent): S
    +visit(event: ErrorEvent): S
    +visit(event: DisconnectedEvent): S
    +visit(event: TotemAvailableEvent): S
    +visit(event: EventsTriggeredEvent): S
  }

  class LoginNeededEvent {
    +<S extends Screen<S>> accept(visitor: EventVisitor<S>): S
  }

  class HomeUpdateEvent <<record>> {
    +activeGames: List<Integer>
    +gamePlayers: Map<Integer, List<String>>
    +gameCapacity: Map<Integer, Integer>
    +message: String
    +HomeUpdateEvent(activeGames, gamePlayers, gameCapacity, message)
    +HomeUpdateEvent(activeGames: List<Integer>)
    +<S extends Screen<S>> accept(visitor: EventVisitor<S>): S
  }

  class LobbyUpdateEvent <<record>> {
    +gameId: int
    +players: List<String>
    +numPlayersAllowed: int
    +message: String
    +LobbyUpdateEvent(gameId, players, numPlayersAllowed, message)
    +LobbyUpdateEvent(gameId: int, players: List<String>, numPlayersAllowed: int)
    +<S extends Screen<S>> accept(visitor: EventVisitor<S>): S
  }

  class GameUpdateEvent <<record>> {
    +game: GameDTO
    +message: String
    +GameUpdateEvent(game: GameDTO, message: String)
    +GameUpdateEvent(game: GameDTO)
    +<S extends Screen<S>> accept(visitor: EventVisitor<S>): S
  }

  class EndGameEvent <<record>> {
    +results: List<MatchResult>
    +records: List<DBRecord>
    +message: String
    +EndGameEvent(results, records, message)
    +<S extends Screen<S>> accept(visitor: EventVisitor<S>): S
  }

  class ErrorEvent <<record>> {
    +message: String
    +ErrorEvent(message: String)
    +<S extends Screen<S>> accept(visitor: EventVisitor<S>): S
  }

  class DisconnectedEvent <<record>> {
    +message: String
    +DisconnectedEvent(message: String)
    +<S extends Screen<S>> accept(visitor: EventVisitor<S>): S
  }

  class TotemAvailableEvent <<record>> {
    +totemList: List<Totem>
    +message: String
    +TotemAvailableEvent(totemList: List<Totem>, message: String)
    +<S extends Screen<S>> accept(visitor: EventVisitor<S>): S
  }

  class EventsTriggeredEvent <<record>> {
    +eventTitle: String
    +logMessage: String
    +EventsTriggeredEvent(eventTitle: String, logMessage: String)
    +<S extends Screen<S>> accept(visitor: EventVisitor<S>): S
  }
}

LoginNeededEvent ..|> ServerEvent
HomeUpdateEvent ..|> ServerEvent
LobbyUpdateEvent ..|> ServerEvent
GameUpdateEvent ..|> ServerEvent
EndGameEvent ..|> ServerEvent
ErrorEvent ..|> ServerEvent
DisconnectedEvent ..|> ServerEvent
TotemAvailableEvent ..|> ServerEvent
EventsTriggeredEvent ..|> ServerEvent

ServerEvent ..> EventVisitor : dispatch
EventVisitor ..> "client.view.Screen"

GameUpdateEvent ..> "shared.model.GameDTO"
EndGameEvent ..> "shared.model.MatchResult"
EndGameEvent ..> "shared.model.DBRecord"
TotemAvailableEvent ..> "shared.enums.Totem"

note bottom of EventVisitor
  Implemented by TUIScreen and GUIScreen base classes.
  Each accept() returns the new Screen to render
  (either the same or a different one).
end note

@enduml
